--- a/apps/sealas_sso/priv/gettext/en/LC_MESSAGES/mail.po
+++ b/apps/sealas_sso/priv/gettext/en/LC_MESSAGES/mail.po
@@ -12,23 +12,38 @@ msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
+"Last-Translator: \n"
 "Language-Team: \n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 2.0.6\n"
-"Last-Translator: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Language: en\n"
+"X-Poedit-Basepath: ../..\n"
+"X-Poedit-SearchPath-0: mail.pot\n"
 
 #: lib/sealas_sso/templates/mail/verification.html.eex:3
+#: lib/sealas_sso/templates/mail/verification.text.eex:5
 msgid "verification_code"
-msgstr "Or use this to go directly to the verification:"
+msgstr "Verify your Sealas account"
 
 #: lib/sealas_sso/templates/mail/verification.html.eex:1
+#: lib/sealas_sso/templates/mail/verification.text.eex:1
 msgid "verification_one_more_step"
-msgstr "Just one more step before you can get started. Copy the code below in the verification box:"
+msgstr ""
+"Just one more step before you can get started. Copy the code below in the "
+"verification box:"
 
 #: lib/sealas_sso/templates/mail/verification.html.eex:5
+#: lib/sealas_sso/templates/mail/verification.text.eex:9
 msgid "verification_verify"
-msgstr "After the verification you can set a password for your account and start using Sealas."
+msgstr ""
+"After the verification you can set a password for your account and start "
+"using Sealas."
+
+#: lib/sealas_sso/mail/user_mail.ex:25
+#, fuzzy
+#| msgid "verification_code"
+msgid "verification_subject"
+msgstr "Or use this to go directly to the verification:"
